# steam-web-api-docs

./: .gitmodules  CMakeLists.txt  configure.bat  requirements.txt
src/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  network.cpp  network.hpp  settings.cpp  settings.hpp
src/gui/hex_editor/: dlg_hex_editor.cpp  dlg_hex_editor.hpp
src/gui/json_editor/: dlg_json_editor.cpp  dlg_json_editor.hpp
src/gui/main/: api_model.cpp  api_model.hpp  api_tree.cpp  api_tree.hpp  dlg_main_window.cpp  dlg_main_window.hpp  parameter.cpp  parameter.hpp  parameters_model.cpp  parameters_model.hpp  parameters_table.cpp  parameters_table.hpp  request_page.cpp  request_page.hpp  requests_widget.cpp  requests_widget.hpp  response_page.cpp  response_page.hpp  responses_widget.cpp  responses_widget.hpp
src/gui/settings/: dlg_settings.cpp  dlg_settings.hpp
src/gui/widgets/: json_view.cpp  json_view.hpp  json_view_model.cpp  json_view_model.hpp  spin_box_64.cpp  spin_box_64.hpp  tab_bar.cpp  tab_bar.hpp  tab_widget.cpp  tab_widget.hpp
src/item_editors/: base_spinbox_editor.hpp  bool_editor.cpp  bool_editor.hpp  enum_editor.cpp  enum_editor.hpp  int32_editor.cpp  int32_editor.hpp  message_editor.cpp  message_editor.hpp  rawbinary_editor.cpp  rawbinary_editor.hpp  string_editor.cpp  string_editor.hpp  uint32_editor.cpp  uint32_editor.hpp  uint64_editor.cpp  uint64_editor.hpp
src/types/: api_interface.cpp  api_interface.hpp  api_method.cpp  api_method.hpp  api_method_parameter.cpp  api_method_parameter.hpp  item_editor_factory.cpp  item_editor_factory.hpp
(+8 files in other folders)
